added move down

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<link rel="stylesheet" href="style.css">
 	
-	<link rel="icon" type="img/png" href="img/logo.png"/>
+	<link rel="icon" type="img/png" href="ninja.png"/>
 	
 	<script defer src="script.js"></script>
 	
