--- a/index.html
+++ b/index.html
@@ -85,11 +85,32 @@
                             <h1> Choississer votre skins</h1>
                         </div>
                         <div class="modal-body">
-                            <div class="row">
-                                <div class="col-4"><button type="button" class="btn-primary">skin1</button></div>
-                                <div class="col-4"><button type="button" class="btn-primary">skin2</button></div>
-                                <div class="col-4"><button type="button" class="btn-primary">skin3</button></div>
-                        </div>
+                            <div id="carouselExampleIndicators" class="carousel slide centered">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="img/perso.png" class="d-block w-100" alt="Skin1">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/perso.png" class="d-block w-100" alt="Skin2">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="img/perso.png" class="d-block w-100" alt="Skin3">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev-primary" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next-primary" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                              </div>
                         </div>
                         <div class="modal-footer">
                             <p> Amusez-vous bien!</p>
