--- a/index.html
+++ b/index.html
@@ -93,22 +93,20 @@
                                 </div>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="img/perso.png" class="d-block w-100" alt="Skin1">
+                                    <img src="" class="d-block w-100" alt="Skin1">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="img/perso.png" class="d-block w-100" alt="Skin2">
+                                    <img src="" class="d-block w-100" alt="Skin2">
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="img/perso.png" class="d-block w-100" alt="Skin3">
+                                    <img src="" class="d-block w-100" alt="Skin3">
                                   </div>
                                 </div>
-                                <button class="carousel-control-prev-primary" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next-primary" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                  <span class="visually-hidden">Next</span>
                                 </button>
                               </div>
                         </div>
