--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <audio id="bgAudio"  loop="loop" autoplay="autoplay" width="0" height="0">
                         <source src="song/menu.mp4" type="audio/mpeg">
                     </audio>
-                <button class="mute btn btn-light" onclick="change_mute()">Son</button>
+                <button class="mute btn btn-light " id="btnSon" onclick="change_mute()"><img src="./img/sonon.svg" id="btnSonImg"></button>
             </div>
             <div class="col col-lg-2">
                 <button class="popup btn btn-light" data-bs-toggle="modal" data-bs-target="#scoresPop">Scores
