--- a/game.html
+++ b/game.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+
 	<link rel="stylesheet" href="style.css">
-	
-	<link rel="icon" type="img/png" href="img/logo.png"/>
-	
+
+	<script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+	<link rel="icon" type="img/png" href="img/logo.png" />
+	<script defer src="menujs.js"></script>
 	<script defer src="script.js"></script>
-	
+
 	<title>Game</title>
 </head>
+
 <body>
-	<canvas id="canvasGame"></canvas>
+		<div class="container-fluid text-center">
+			<div class="row ">
+				<div class="col scoreGame bg-dark bg-gradient text-primary">
+					<h2>Affichage des scores en temps réel</h2>
+				</div>
+			</div>
+			<div class="row ">
+				<div class="col">
+				<canvas id="canvasGame"></canvas>
+			</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<audio id="bgAudio" loop="loop" >
+                        <source src="./song/menu.mp4" type="audio/mpeg">
+                    </audio>
+                    <button class="mute btn btn-light" onclick="change_mute()"><img src="./img/sonon.svg"
+                            id="btnSonImg"></button>
+				</div>
+				<div class="col">
+				<a href="index.html"><button class="btn btn-light"><img src="img/house.svg"
+					class="img-fluid" /></button></a>
+				</div>
+			</div>
+	</div>
 </body>
 <footer>
-	
+
 </footer>
 
 </html>
