--- a/game.html
+++ b/game.html
@@ -12,7 +12,6 @@
 	<script src="./bootstrap/js/bootstrap.min.js"></script>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 	<link rel="icon" type="img/png" href="img/logo.png" />
-	<script defer src="menujs.js"></script>
 	<script defer src="script.js"></script>
 
 	<title>Game</title>
@@ -32,10 +31,10 @@
 			</div>
 			<div class="row">
 				<div class="col">
-					<audio id="bgAudio" loop="loop" >
+					<audio id="bgAudio" loop="loop" autoplay="autoplay">
                         <source src="./song/menu.mp4" type="audio/mpeg">
                     </audio>
-                    <button class="mute btn btn-light" onclick="change_mute()"><img src="./img/sonon.svg"
+                    <button class="mute btn btn-light" onclick="change_mute()" onclick=console.log(colorSkin)><img src="./img/sonon.svg"
                             id="btnSonImg"></button>
 				</div>
 				<div class="col">
