--- a/index.html
+++ b/index.html
@@ -1,20 +1,234 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
-	<link rel="stylesheet" href="style.css">
-	
-	<link rel="icon" type="img/png" href="ninja.png"/>
-	
-	<script defer src="script.js"></script>
-	
-	<title>Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="img/png" href="img/logo.png" />
+
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script defer src="menujs.js"></script>
+
+    <title>Game</title>
 </head>
+
 <body>
-	<canvas id="canvasGame"></canvas>
+    <div class="container-fluid">
+        <div class="container text-center">
+
+            <div class="row">
+                <div class="col">
+                    <img src=" ./img/redNinja.gif" class="img-fluid">
+                </div>
+                <div class="col">
+                    <h1 class="title display-1">PIX&RUN</h1>
+                </div>
+                <div class="col">
+                    <img src=" ./img/blueNinjaTop.gif" class="img-fluid">
+                </div>
+            </div>
+
+            <!--les boutons de l'accueil-->
+            <div class="row p-2">
+                <div class="col">
+                    <a href="game.html"><button class="btn btn-light bigbutton"><img src="img/play.svg"
+                                class="img-fluid" height="40px" width="40px" /></button></a>
+                </div>
+            </div>
+
+            <div class="row p-2">
+                <div class="col">
+                    <button class="popup btn bigbutton" data-bs-toggle="modal" data-bs-target="#comPop">Commandes
+                    </button>
+                </div>
+            </div>
+
+            <div class="row row p-2 justify-content-md-center">
+                <div class="col col-lg-2">
+                    <button class="popup btn btn-light" data-bs-toggle="modal" data-bs-target="#skinsPop">Skins
+                </div>
+                <div class="col-md-auto">
+                    <audio id="bgAudio" loop autoplay>
+                        <source src="song/menu.mp3" type="audio/mpeg">
+                    </audio>
+                    <button class="mute btn btn-light" onclick="change_mute()"><img src="./img/sonon.svg"
+                            id="btnSonImg"></button>
+                </div>
+                <div class="col col-lg-2">
+                    <button class="popup btn btn-light" data-bs-toggle="modal" data-bs-target="#scoresPop">Scores
+                    </button>
+                </div>
+
+                <!--les popup-->
+                <!--popup des commandes de jeu-->
+                <div id="comPop" class="modal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header-centered">
+                                <h1> Les commandes de jeu</h1>
+                            </div>
+                            <div class="modal-body">
+                                <table class="table table-bordered dark">
+                                    <thead>
+                                        <tr class="table-dark">
+                                            <th scope="col">Touches</th>
+                                            <th scope="col">Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody class="table-secondary">
+                                        <tr>
+                                            <td>Z<br>↑</td>
+                                            <td>Sauter</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Q<br>←</td>
+                                            <td>Courir à gauche</td>
+                                        </tr>
+                                        <tr>
+                                            <td>D<br>→</td>
+                                            <td>Courir à droite</td>
+                                        </tr>
+                                        <tr>
+                                            <td>/../</td>
+                                            <td>Mettre en pause le jeu</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="modal-footer">
+                                <h6>Voici les différentes commandes qui vous seront utiles pour jouer au jeu</h6>
+                                <button type="button" class="btn-danger" data-bs-dismiss="modal">❌</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!--popup des skins-->
+            <div id="skinsPop" class="modal">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header-centered">
+                            <h1> Choississez votre skins</h1>
+                        </div>
+                        <div class="modal-body Skins">
+                            <div class="row">
+                                <div class="col ">
+                                    <img id="imgBlackSkin" class="skinDefault" src="img/blackNinja.gif">
+                                    <img id="imgRedSkin" class="skinsImg" src="img/redNinja.gif">
+                                    <img id="imgBluekSkin" class="skinsImg" src="img/blueNinja.gif">
+                                </div>
+                            </div>
+                            <div class="row ">
+                                <div class="col skinsBtn">
+                                    <button id="btnBlackSkin" class="btn-dark">Black</button>
+                                    <button id="btnRedSkin" class="btn-danger">Red</button>
+                                    <button id="btnBlueSkin" class="btn-primary">Blue</button>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <h6>Woaaa des ninjas en plusieurs couleurs!!! Le ninja noir est choisi par défaut</h6>
+                            <button type="button" class="btn-danger" data-bs-dismiss="modal">❌</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--popup des scores-->
+            <div id="scoresPop" class="modal dark">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header-centered">
+                            <h1> Highscores</h1>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#Top</th>
+                                        <th scope="col">Pseudo</th>
+                                        <th scope="col">Score</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>4500PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>3250PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>Jean</td>
+                                        <td>3000PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">4</th>
+                                        <td>Will</td>
+                                        <td>2900PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">5</th>
+                                        <td>William</td>
+                                        <td>2800PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">6</th>
+                                        <td>Sarah</td>
+                                        <td>2500PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">7</th>
+                                        <td>François</td>
+                                        <td>2400PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">8</th>
+                                        <td>Fatima</td>
+                                        <td>2200PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">9</th>
+                                        <td>Rachel</td>
+                                        <td>1500PR</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">10</th>
+                                        <td>Claude</td>
+                                        <td>950PR</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn-sm btn-secondary">Effacer les scores</button>
+                            <button type="button" class="btn-danger" data-bs-dismiss="modal">❌</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="container-fluid">
+            <div class="wave1"></div>
+            <div class="wave2"></div>
+            <div class="wave3"></div>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
