--- a/game.html
+++ b/game.html
@@ -38,6 +38,10 @@
                             id="btnSonImg"></button>
 				</div>
 				<div class="col">
+					<button class="mute btn btn-light" onclick="toggleAnimation()"><img src="./img/logoPause.png" width="20px" height="20px";
+						id="btnSonImg"></button>
+				</div>
+				<div class="col">
 				<a href="index.html"><button class="btn btn-light"><img src="img/house.svg"
 					class="img-fluid" /></button></a>
 				</div>
