hitbox more visible separate classes for Sprites

--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
 	<link rel="icon" type="img/png" href="img/logo.png" />
 	<script defer src="script.js"></script>
 	<script src ="classes\Obstacle.js"> </script>
+	<script src ="classes\SpriteClasses.js"> </script>
 	<title>Game</title>
 </head>
 
