--- a/game.html
+++ b/game.html
@@ -32,7 +32,8 @@
 			<div class="row">
 				<div class="col">
 					<audio id="bgAudio" loop autoplay>
-                        <source src="./song/menu.mp3" type="audio/mpeg">
+                        <source src="./song/gamesong.mp3
+						" type="audio/mpeg">
                     </audio>
                     <button class="mute btn btn-light" onclick="change_mute()"><img src="./img/sonon.svg"
                             id="btnSonImg"></button>
