--- a/game.html
+++ b/game.html
@@ -20,13 +20,13 @@
 <body>
 	<div class="container-fluid text-center">
 		<div class="row ">
-			<div class="col scoreGame bg-dark bg-gradient text-primary">
-				<h2>Affichage des scores en temps réel</h2>
+			<div class="col">
+				<canvas id="canvasGame"></canvas>
 			</div>
 		</div>
 		<div class="row ">
-			<div class="col">
-				<canvas id="canvasGame"></canvas>
+			<div class="col scoreGame text-primary">
+				<h2>0</h2>
 			</div>
 		</div>
 		<div class="row">
